--- a/WebVisualisations/Humidity.html
+++ b/WebVisualisations/Humidity.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-black" href="Home Page.html">WEATHER ANALYSIS BY ISHAAN NIGAM</a>
+            <a class="navbar-brand text-black" href="../index.html">WEATHER ANALYSIS BY ISHAAN NIGAM</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="data.html">View Data</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/shuchiK38/Web_Design_Challenge"></a>
+                        <a class="nav-link" href="https://github.com/ishaan04/Web-Design-Challenge"></a>
                     </li>
                 </ul>
             </div>
