--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet"  href="body {.css">
+    <link rel="stylesheet"  href="WebVisualisations/body {.css">
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -20,20 +20,20 @@
                             Weather Analysis Plots
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="Cloudiness.html">Cloudiness Analysis</a>
-                            <a class="dropdown-item" href="Humidity.html">Humidity Analysis</a>
-                            <a class="dropdown-item" href="Temperature.html">Temperature</a>
-                            <a class="dropdown-item" href="Wind Speed-1.html">Wind Speed</a>
+                            <a class="dropdown-item" href="WebVisualisations/Cloudiness.html">Cloudiness Analysis</a>
+                            <a class="dropdown-item" href="WebVisualisations/Humidity.html">Humidity Analysis</a>
+                            <a class="dropdown-item" href="WebVisualisations/Temperature.html">Temperature</a>
+                            <a class="dropdown-item" href="WebVisualisations/Wind Speed-1.html">Wind Speed</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Comparision.html">Weather Analysis Comparison</a>
+                        <a class="nav-link" href="WebVisualisations/Comparision.html">Weather Analysis Comparison</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">View Data</a>
+                        <a class="nav-link" href="WebVisualisations/data.html">View Data</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/shuchiK38/Web_Design_Challenge"></a>
+                        <a class="nav-link" href="https://github.com/ishaan04/Web-Design-Challenge"></a>
                     </li>
                 </ul>
             </div>
@@ -45,7 +45,7 @@
                 <div class="box">
                     <h3 class="title">Welcome To Weather Analysis</h3>
                     <hr>
-                    <img src="Images/equator.png.crdownload" class="rounded float-left" alt="Equator Map" width="400" height="400" style="position:relative"> 
+                    <img src="WebVisualisations/Images/equator.png.crdownload" class="rounded float-left" alt="Equator Map" width="400" height="400" style="position:relative"> 
                     <p>This project explores how common weather paterns change from location to location, especially as we move further away from the equator. By using weather data from over 500 cities, OpenWeatherMap API and Matplotlib tools were used for this Analysis
                         .<br><br><br><br><br><br></p>
                 </div>
@@ -58,29 +58,29 @@
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-md-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
-                                <a href="temperature.html">
-                                <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig1.png" alt="Max Temperature Graph" width="300" height="200">
+                                <a href="WebVisualisations/Temperature.html">
+                                <img class="panel" src="WebVisualisations/Resources/assets/images/Fig1.png" alt="Max Temperature Graph" width="300" height="200">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
-                                <a href="humidity.html">
-                                <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig2.png" alt="Humidity Graph" width="300" height="200">
+                                <a href="WebVisualisations/Humidity.html">
+                                <img class="panel" src="WebVisualisations/Resources/assets/images/Fig2.png" alt="Humidity Graph" width="300" height="200">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
-                                <a href="cloudiness.html">
-                                <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig3.png" alt="Cloudiness Graph" width="300" height="200">
+                                <a href="WebVisualisations/Cloudiness.html">
+                                <img class="panel" src="WebVisualisations/Resources/assets/images/Fig3.png" alt="Cloudiness Graph" width="300" height="200">
                                 </a>
                               
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
-                                <a href="wind.html">
-                                    <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig4.png" alt="Wind Speed Graph" width="300" height="200">
+                                <a href="WebVisualisations/Wind Speed-1.html">
+                                    <img class="panel" src="WebVisualisations/Resources/assets/images/Fig4.png" alt="Wind Speed Graph" width="300" height="200">
                                 </a>
                             </div>
                         </div>
