--- a/WebVisualisations/Temperature.html
+++ b/WebVisualisations/Temperature.html
@@ -58,13 +58,13 @@
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-md-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
-                                <a href="temperature.html">
+                                <a href="Temperature.html">
                                 <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig1.png" alt="Max Temperature Graph" width="300" height="200">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
-                                <a href="humidity.html">
+                                <a href="Humidity.html">
                                 <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig2.png" alt="Humidity Graph" width="300" height="200">
                                 </a>
                             </div>
@@ -72,7 +72,7 @@
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
-                                <a href="cloudiness.html">
+                                <a href="Cloudiness.html">
                                 <img class="panel" src="../WebVisualisations/Resources/assets/images/Fig3.png" alt="Cloudiness Graph" width="300" height="200">
                                 </a>
                               
