--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-black" href="Home Page.html">WEATHER ANALYSIS BY ISHAAN</a>
+            <a class="navbar-brand text-black" href="Home Page.html">WEATHER ANALYSIS BY ISHAAN N</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
